test_cases/negative/export_import_in_function.snek
def Double(value) {
    export import "../lib.snek" as lib;
    return Add(value, value);
}

export DEFAULT = Double(10);
